fix (list): broken layout on long filename

--- a/public/assets/pages/filespage/thing.css
+++ b/public/assets/pages/filespage/thing.css
@@ -25,6 +25,7 @@
 .component_thing .file-details > span {
     display: inline-block;
     width: calc(100% - 130px);
+    max-width: 750px;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
